// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/rollup.js watch mode should generate updated output 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "assets/watched.css": "/* packages/rollup/test/output/watch/change/watched.css */
- .mc5f9237d4_one {
-     color: red;
+ .mc5f9237d4_two {
+     color: blue;
  }",
-   "output.js": "const one = \\"mc5f9237d4_one\\";
+   "output.js": "const two = \\"mc5f9237d4_two\\";
  var css = {
-     \\"one\\" : one
+     \\"two\\" : two
  };

  console.log(css);
  ",
  }
`;

exports[`/rollup.js watch mode should generate updated output for composes changes 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ --- --- @@
  Object {
    "assets/watched.css": "/* packages/rollup/test/output/watch/change-composes/watched.css */
  .mc0f3c579a_one {
-     color: red;
+     color: green;
  }

  .mc0f3c579a_two {
      background: blue;
  }
@@ --- --- @@
      color: teal;
  }",
    "output.js": "var css = {
      \\"one\\": \\"mc0f3c579a_one\\",
      \\"two\\": \\"mc0f3c579a_one mc0f3c579a_two\\",
-     \\"three\\": \\"mc0f3c579a_three\\"
+     \\"three\\": \\"mc0f3c579a_one mc0f3c579a_three\\"
  };

  console.log(css);
  ",
  }
`;

exports[`/rollup.js watch mode should update when a dependency changes 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ --- --- @@
  Object {
    "assets/one.css": "/* packages/rollup/test/output/watch/dep-graph/two.css */
  .mc6f857f1c_two {
-     color: blue;
+     color: green;
  }
  /* packages/rollup/test/output/watch/dep-graph/three.css */
  .mc7228cc44_three {
      color: green;
  }
`;

exports[`/rollup.js watch mode should update when a shared @value changes 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ --- --- @@
  Object {
    "assets/one.css": "/* packages/rollup/test/output/watch/shared-deps/values.css */
  /* packages/rollup/test/output/watch/shared-deps/one.css */
  .mca79168b9_one {
-     color: blue;
+     color: red;
  }",
    "assets/three.css": "/* packages/rollup/test/output/watch/shared-deps/two.css */
  .mc5067d789_two {
      color: yellow;
  }
@@ --- --- @@
  /* packages/rollup/test/output/watch/shared-deps/three.css */
  .mc4ec9318b_three {
      color: teal;
  }",
    "output.js": "var css = {
-     \\"baloo\\": \\"blue\\",
+     \\"baloo\\": \\"red\\",
      \\"one\\": \\"mca79168b9_one\\"
  };

  console.log(css);
  ",
`;

exports[`/rollup.js watch mode should update when a shared dependency changes 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ --- --- @@
  Object {
    "assets/three.css": "/* packages/rollup/test/output/watch/shared-deps/two.css */
  .mc5067d789_two {
-     color: green;
+     color: yellow;
  }
  /* packages/rollup/test/output/watch/shared-deps/one.css */
  .mca79168b9_one {
      color: red;
  }
`;

exports[`/rollup.js watch mode should update when adding new css files 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
-   "output.js": "console.log(\\"hello\\");
+   "assets/one.css": "/* packages/rollup/test/output/watch/new-file/one.css */
+ .mc54f12712_one {
+     color: red;
+ }",
+   "output.js": "var css = {
+     \\"one\\": \\"mc54f12712_one\\"
+ };
+
+ console.log(css);
  ",
  }
`;

exports[`/rollup.js watch mode should watch when using code splitting 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ --- --- @@
  .mc204ad279_one {
      color: red;
  }",
    "assets/shared.css": "/* packages/rollup/test/output/watch/code-splitting/shared.css */
  .mc4002e81f_shared {
-     color: blue;
+     color: seafoam;
  }",
    "assets/two.css": "/* packages/rollup/test/output/watch/code-splitting/two.css */
  .mc3861d3af_two {
      color: green;
  }",
`;
